--- a/LetsGoBlack/www/templates/startup.html
+++ b/LetsGoBlack/www/templates/startup.html
@@ -1,5 +1,5 @@
 <form ua-login>
-  <ion-view title="Log In">
+  <ion-view title="Let's Go Black">
     <ion-content>
       <div class="padding" style="text-align: center; padding-top: 100px;">
         <h2>Welcome to MyApp</h2>
