--- a/LetsGoBlack/www/css/style.css
+++ b/LetsGoBlack/www/css/style.css
@@ -1,1 +1,9 @@
-/* Empty. Add your own CSS if you like */
+/* Empty. Add your own CSS if you like bllong@aggies.ncat.edu */
+
+
+.StartBackground {
+    background-image: url("/img/homescreenbackground.jpg");
+    background-color: #cccccc;
+
+
+}
