--- a/LetsGoBlack/www/templates/login.html
+++ b/LetsGoBlack/www/templates/login.html
@@ -3,11 +3,12 @@
     <ion-content>
       <div class="list list-inset">
         <label class="item item-input">
-          <span class="input-label">Email</span>
+          <link rel="icon" href="www/img/mail-message-icon-65555.png"> <span class="input-label" id="helpico">Email: </span>
           <input type="text" name="login">
         </label>
+        <p></p>
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label">Password: </span>
           <input type="password" name="password">
         </label>
       </div>
