--- a/LetsGoBlack/www/templates/startup.html
+++ b/LetsGoBlack/www/templates/startup.html
@@ -5,6 +5,9 @@
       <div class="padding" style="text-align: center; padding-top: 100px;">
         <img src="../img/logo.png" style="width:304px;height:148px;">
 
+        <p>Where culture meets adventure, <br> one road trip at a time.</p>
+        <br><br>
+
 
         <button class="button button-assertive">
           LOGIN
@@ -12,8 +15,6 @@
         <button class="button button-assertive">
           SIGN UP
         </button>
-
-
       </div>
     </ion-content>
   </ion-view>
