--- a/LetsGoBlack/www/templates/startup.html
+++ b/LetsGoBlack/www/templates/startup.html
@@ -9,12 +9,13 @@
         <br><br>
 
 
-        <button class="button button-assertive btn">
+        <a href="#/login"> <button class="button button-assertive btn">
           LOGIN
-        </button>
-        <button class="button button-assertive btn">
+        </button> </a>
+
+        <a href="#/trip-setup"> <button class="button button-assertive btn">
           SIGN UP
-        </button>
+        </button> </a>
       </div>
     </ion-content>
   </ion-view>
