--- a/LetsGoBlack/www/templates/login.html
+++ b/LetsGoBlack/www/templates/login.html
@@ -1,3 +1,9 @@
+<ion-nav-bar class="bar-assertive nav-title-slide-ios7 bar-asseritve">
+      <ion-nav-back-button class="button-icon icon ion-chevron-left">
+        Back
+      </ion-nav-back-button>
+
+      
 <form ua-login>
   <ion-view title="Log In">
     <ion-content>
@@ -30,3 +36,5 @@
     <div class="title">{{ error.message }}</div>
   </div>
 </form>
+    </ion-nav-bar>
+
