--- a/LetsGoBlack/www/templates/signup.html
+++ b/LetsGoBlack/www/templates/signup.html
@@ -1,4 +1,8 @@
-<form ua-signup>
+<ion-nav-bar class="bar-assertive nav-title-slide-ios7 bar-asseritve">
+      <ion-nav-back-button class="button-icon icon ion-chevron-left">
+        Back
+      </ion-nav-back-button>
+    <form ua-signup>
   <ion-view title="Sign Up">
     <ion-content>
       <div class="list list-inset">
@@ -26,4 +30,5 @@
   <div class="bar bar-footer bar-assertive" ng-show="error">
     <div class="title">{{ error.message }}</div>
   </div>
-</form>
+</form></ion-nav-bar>
+
