--- a/LetsGoBlack/www/templates/startup.html
+++ b/LetsGoBlack/www/templates/startup.html
@@ -13,7 +13,7 @@
           LOGIN
         </button> </a>
 
-        <a href="#/trip-setup"> <button class="button button-assertive btn">
+        <a href="#/signup"> <button class="button button-assertive btn">
           SIGN UP
         </button> </a>
       </div>
