more login formatting

--- a/LetsGoBlack/www/templates/login.html
+++ b/LetsGoBlack/www/templates/login.html
@@ -1,12 +1,11 @@
 <form ua-login>
   <ion-view title="Log In">
-    <ion-content>
+    <ion-content class="login-background">
       <div class="list list-inset">
         <label class="item item-input">
-          <link rel="icon" href="www/img/mail-message-icon-65555.png"> <span class="input-label" id="helpico">Email: </span>
+          <link rel="icon" href="www/img/mail-message-icon-65555.png"> <span class="input-label" >Email: </span>
           <input type="text" name="login">
         </label>
-        <p></p>
         <label class="item item-input">
           <span class="input-label">Password: </span>
           <input type="password" name="password">
