3rd login format

--- a/LetsGoBlack/www/templates/login.html
+++ b/LetsGoBlack/www/templates/login.html
@@ -3,13 +3,14 @@
         Back
       </ion-nav-back-button>
 
-      
+
 <form ua-login>
   <ion-view title="Log In">
     <ion-content class="login-background">
+      <div class="padding" style="text-align: left; padding-top: 60%;">
       <div class="list list-inset">
         <label class="item item-input">
-          <link rel="icon" href="www/img/mail-message-icon-65555.png"> <span class="input-label" >Email: </span>
+          <span class="input-label" >Email: </span>
           <input type="text" name="login">
         </label>
         <label class="item item-input">
@@ -28,6 +29,7 @@
         <p class="text-center">
           <a href="#/signup">Sign Up</a>
         </p>
+      </div>
       </div>
     </ion-content>
   </ion-view>
