--- a/LetsGoBlack/www/css/style.css
+++ b/LetsGoBlack/www/css/style.css
@@ -18,21 +18,11 @@
 }
 
 label { 
-margin-top: 500px;
 color: #B4886B;
  padding: padding-center;
  font-weight: bold; 
 width: 350px; 
-float: right;
-margin: 20px;
-}
-
-input, textarea {
-top: 0;
-    left: 0;
-    z-index: 1;
-    padding: 8px 12px;
-    outline: 0;
+float: left;
 }
 
 .btn{
