--- a/LetsGoBlack/www/templates/menu.html
+++ b/LetsGoBlack/www/templates/menu.html
@@ -14,15 +14,21 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-assertive">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item menu-close href="#/app/trip-setup">
+          Trip Setup
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item menu-close href="#/app/selected-trip">
+          Your Trip
+        </ion-item>
+        <ion-item menu-close href="#/app/terms-privacy">
+          Terms & Privacy Policy
+        </ion-item>
+        <ion-item menu-close href="#/app/account">
+          Account
         </ion-item>
         <ion-item menu-close >
          <a class="button button-block button-positive" ua-logout>
