--- a/LetsGoBlack/www/templates/trip-setup.html
+++ b/LetsGoBlack/www/templates/trip-setup.html
@@ -2,7 +2,7 @@
   <ion-view view-title="Let's Go Black">
     <ion-content class="start-background">
       <div class="padding" style="text-align: center; padding-top: 60%;">
-        <img src="../img/logo.png" style="width:304px;height:148px;">
+        <img src="img/logo.png" style="width:304px;height:148px;">
 
         <div class="list">
           <label class="item item-input">
@@ -26,7 +26,7 @@
           </div>
 
         <a href="#/selected-trip"> <button class="button button-assertive btn">
-          LOGIN
+          LET'S GO!
         </button> </a>
 
       </div>
