--- a/LetsGoBlack/www/templates/selected-trip.html
+++ b/LetsGoBlack/www/templates/selected-trip.html
@@ -1,6 +1,6 @@
 <body class="start-background">
 <form ua-login>
-  <ion-view title="Let's Go Black">
+  <ion-view title="Your Trip">
     <ion-content class="start-background">
       <div class="padding" style="text-align: center; padding-top: 60%;">
         <img src="../img/logo.png" style="width:304px;height:148px;">
