--- a/LetsGoBlack/www/templates/startup.html
+++ b/LetsGoBlack/www/templates/startup.html
@@ -3,7 +3,7 @@
   <ion-view title="Let's Go Black">
     <ion-content class="start-background">
       <div class="padding" style="text-align: center; padding-top: 60%;">
-        <img src="/../img/logo.png" style="width:304px;height:148px;">
+        <img src="img/logo.png" style="width:304px;height:148px;">
 
         <p>Where culture meets adventure, <br> one road trip at a time.</p>
         <br><br>
