--- a/LetsGoBlack/www/templates/signup.html
+++ b/LetsGoBlack/www/templates/signup.html
@@ -22,7 +22,7 @@
         <img src="{{ home_ctrl.current_image }}" class="picture">
       </div>
       <div class="padding">
-        <!--<button class="button button-block button-positive ng-cl" ng-click="takePicture">  </button>-->
+        <button class="button button-block button-positive ng-cl" ng-click="takePicture">  </button>
           <span ng-show="!loading">Create Account</span>
           <i ng-show="loading" class="ion-loading-b"></i>
         </button>
