--- a/LetsGoBlack/www/templates/selected-trip.html
+++ b/LetsGoBlack/www/templates/selected-trip.html
@@ -2,8 +2,39 @@
 <form ua-login>
   <ion-view title="Your Trip">
     <ion-content class="start-background">
-      <div class="padding" style="text-align: center; padding-top: 60%;">
-        <img src="../img/logo.png" style="width:304px;height:148px;">
+      <div class="padding" style="text-align: center; padding-top: 30%;">
+        <div class="card">
+          <div class="item item-text-wrap">
+            <div class="row">
+              <div class="col">
+                <img src="img/logo.png" style="width:200px;height:100px;">
+
+              </div>
+              <div class="col gray">
+                <p>Your Trip Details:</p>
+                <p>Starting City:</p>
+                <p>Ending City:</p>
+                <p>Trip Theme:</p>
+              </div>
+            </div>
+
+
+
+          </div>
+        </div>
+
+        <a class="item item-thumbnail-left" href="#">
+
+            <img class="image" src="img/0047899-1_0.JPG" alt="" />
+
+
+
+          <h2>Pretty Hate Machine</h2>
+          <p>Nine Inch Nails</p>
+        </a>
+
+
+        </div>
 
       </div>
     </ion-content>
