finish selected trip

--- a/LetsGoBlack/www/templates/selected-trip.html
+++ b/LetsGoBlack/www/templates/selected-trip.html
@@ -2,40 +2,47 @@
 <form ua-login>
   <ion-view title="Your Trip">
     <ion-content class="start-background">
-      <div class="padding" style="text-align: center; padding-top: 30%;">
+      <div class="padding" style="text-align: center; padding-top: 5%;">
         <div class="card">
           <div class="item item-text-wrap">
             <div class="row">
               <div class="col">
-                <img src="img/logo.png" style="width:200px;height:100px;">
-
-              </div>
-              <div class="col gray">
-                <p>Your Trip Details:</p>
-                <p>Starting City:</p>
-                <p>Ending City:</p>
-                <p>Trip Theme:</p>
+                  <img src="img/logo.png" style="width:200px;height:100px;">
+            
+                      <div class="col gray">
+                        <p><b>Your Trip Details:</b></p>
+                        <p>Starting City: San Francisco, CA</p>
+                        <p>Trip Duration: 2 Days</p>
+                        <p>Trip Theme: History</p>
+                      </div>
               </div>
             </div>
-
-
-
           </div>
-        </div>
-
-        <a class="item item-thumbnail-left" href="#">
-
-            <img class="image" src="img/0047899-1_0.JPG" alt="" />
-
-
-
-          <h2>Pretty Hate Machine</h2>
-          <p>Nine Inch Nails</p>
-        </a>
-
-        </div>
-
       </div>
+        </div>
+        <div>
+            <a class="item item-thumbnail-left" href="#">
+                <img class="image" src="img/moad.jpg" alt="" />
+              <h2>Museum of the African Dispora</h2>
+              <p>685 Mission St San Francisco, CA 94105</p>
+            </a>
+        </div>
+         <div>
+            <a class="item item-thumbnail-left" href="#">
+                <img class="image" src="img/mlk.jpg" alt="" />
+                <h2>Dr. Martin Luther King Jr. Memorial</h2>
+                <p>750 Howard St San Francisco, CA 94103</p>
+             </a>
+          </div>
+          <div>
+            <a class="item item-thumbnail-left" href="#">
+                <img class="image" src="img/coltrane.jpg" alt="" />
+                <h2>Saint John Coltraine African American Church</h2>
+                <p>1286 Fillmore St San Francisco, CA 94115</p>
+             </a>
+          </div>
+
+
     </ion-content>
   </ion-view>
   <div class="bar bar-footer bar-assertive" ng-show="error">
