--- a/LetsGoBlack/www/templates/trip-setup.html
+++ b/LetsGoBlack/www/templates/trip-setup.html
@@ -25,7 +25,7 @@
           </label>
           </div>
 
-        <a href="#/selected-trip"> <button class="button button-assertive btn">
+        <a href="#/app/selected-trip"> <button class="button button-assertive btn">
           LET'S GO!
         </button> </a>
 
