stripe almost working

--- a/LetsGoBlack/www/css/style.css
+++ b/LetsGoBlack/www/css/style.css
@@ -35,3 +35,11 @@ float: left;
 
   .test2:before {
     content: "2K"; }
+
+.submit-button {
+  margin-top: 10px;
+}
+
+.submit-button {
+  margin-top: 10px;
+}
