--- a/LetsGoBlack/www/templates/menu.html
+++ b/LetsGoBlack/www/templates/menu.html
@@ -21,6 +21,9 @@
         <ion-item menu-close href="#/app/trip-setup">
           Trip Setup
         </ion-item>
+        <ion-item menu-close href="#/app/add-business">
+          Add Business
+        </ion-item>
         <ion-item menu-close href="#/app/selected-trip">
           Your Trip
         </ion-item>
