create account name came up twice deleted one (from sign up page)

--- a/LetsGoBlack/www/templates/signup.html
+++ b/LetsGoBlack/www/templates/signup.html
@@ -23,7 +23,7 @@
       </div>
       <div class="padding">
         <button class="button button-block button-positive ng-cl" ng-click="takePicture">Create My Account</button>
-          <span ng-show="!loading">Create Account</span>
+          <span ng-show="!loading"></span>
           <i ng-show="loading" class="ion-loading-b"></i>
         </button>
       </div>
