--- a/LetsGoBlack/www/templates/selected-stop.html
+++ b/LetsGoBlack/www/templates/selected-stop.html
@@ -5,33 +5,13 @@
       <div class="padding" style="text-align: center; padding-top: 5%;">
         <div class="card">
           <div class="item item-text-wrap">
-            <img class="image" src="img/moad.jpg" alt="" />
-
+            <img class="header-img" src="img/moad.jpg" alt="" />
+            <div class="row gray"><p>MUSEUM OF THE AFRICAN DISPORA</p></div>
 
           </div>
         </div>
       </div>
-      <div>
-        <a class="item item-thumbnail-left" href="#">
-          <img class="image" src="img/moad.jpg" alt="" />
-          <h2>Museum of the African Dispora</h2>
-          <p>685 Mission St San Francisco, CA 94105</p>
-        </a>
-      </div>
-      <div>
-        <a class="item item-thumbnail-left" href="#">
-          <img class="image" src="img/mlk.jpg" alt="" />
-          <h2>Dr. Martin Luther King Jr. Memorial</h2>
-          <p>750 Howard St San Francisco, CA 94103</p>
-        </a>
-      </div>
-      <div>
-        <a class="item item-thumbnail-left" href="#">
-          <img class="image" src="img/coltrane.jpg" alt="" />
-          <h2>Saint John Coltraine African American Church</h2>
-          <p>1286 Fillmore St San Francisco, CA 94115</p>
-        </a>
-      </div>
+
 
 
     </ion-content>
