all changes that are good BL

--- a/LetsGoBlack/www/templates/selected-trip.html
+++ b/LetsGoBlack/www/templates/selected-trip.html
@@ -1,6 +1,6 @@
 <body class="start-background">
 <form ua-login>
-  <ion-view title="Your Trip">
+  <ion-view view-title="Your Trip">
     <ion-content class="start-background">
       <div class="padding" style="text-align: center; padding-top: 5%;">
         <div class="card">
