--- a/LetsGoBlack/www/templates/selected-stop.html
+++ b/LetsGoBlack/www/templates/selected-stop.html
@@ -1,13 +1,22 @@
-<body class="start-background">
-<form ua-login>
-  <ion-view title="Trip Stop">
+
+  <ion-view view-title="Your Stop">
     <ion-content class="start-background">
       <div class="padding" style="text-align: center; padding-top: 5%;">
         <div class="card">
           <div class="item item-text-wrap">
-            <img class="header-img" src="img/moad.jpg" alt="" />
-            <div class="row gray"><p>MUSEUM OF THE AFRICAN DISPORA</p></div>
-
+              <img class="image" style="width:80%" src="img/moad.jpg" alt="" />
+              <div class=" gray"><p>MUSEUM OF THE AFRICAN DISPORA</p></div>
+              <p><b>Description:</b></p>
+                <p>
+                    The Museum of the African Diaspora is a museum in San Francisco, California, documenting the African diaspora. MoAD showcases the history, art, and cultural richness that resulted from the migration of Africans throughout the world. 
+                </p>
+                <br>
+                <p><b>Address</b></p>
+                <p>685 Mission St, San Francisco, CA 94105</p>
+                <br>
+                <p><b>Number</b></p>
+                <p>(415) 358-7200</p>
+      
           </div>
         </div>
       </div>
@@ -16,8 +25,3 @@
 
     </ion-content>
   </ion-view>
-  <div class="bar bar-footer bar-assertive" ng-show="error">
-    <div class="title">{{ error.message }}</div>
-  </div>
-</form>
-</body>
