--- a/LetsGoBlack/www/templates/trip-setup.html
+++ b/LetsGoBlack/www/templates/trip-setup.html
@@ -1,5 +1,5 @@
 
-  <ion-view view-title="Let's Go Black">
+  <ion-view view-title="Trip Setup">
     <ion-content class="start-background">
       <div class="padding" style="text-align: center; padding-top: 60%;">
         <img src="img/logo.png" style="width:304px;height:148px;">
@@ -31,11 +31,5 @@
           LET'S GO!
         </button> </a>
       </div>
-
     </ion-content>
   </ion-view>
-
-  <div class="bar bar-footer bar-assertive" ng-show="error">
-    <div class="title">{{ error.message }}</div>
-  </div>
-
