--- a/LetsGoBlack/www/templates/museum-stop.html
+++ b/LetsGoBlack/www/templates/museum-stop.html
@@ -5,16 +5,16 @@
         <div class="card">
           <div class="item item-text-wrap">
               <img class="image" style="width:80%" src="img/moad.jpg" alt="" />
-              <div class=" gray"><p>MUSEUM OF THE AFRICAN DISPORA</p></div>
+              <div class=" gray"><p><b>Museum of the African Dispora</b></p></div>
               <p><b>Description:</b></p>
                 <p>
                     The Museum of the African Diaspora is a museum in San Francisco, California, documenting the African diaspora. MoAD showcases the history, art, and cultural richness that resulted from the migration of Africans throughout the world. 
                 </p>
                 <br>
-                <p><b>Address</b></p>
+                <p><b>Address:</b></p>
                 <p>685 Mission St, San Francisco, CA 94105</p>
                 <br>
-                <p><b>Number</b></p>
+                <p><b>Number:</b></p>
                 <p>(415) 358-7200</p>
       
           </div>
