--- a/LetsGoBlack/www/templates/selected-trip.html
+++ b/LetsGoBlack/www/templates/selected-trip.html
@@ -21,21 +21,21 @@
       </div>
       <div class="padding">
             <div >
-              <a class="item item-thumbnail-left" href="#/app/selected-stop">
+              <a class="item item-thumbnail-left" href="#/app/museum-stop">
                 <img class="image" src="img/moad.jpg" alt="" />
                 <h2>Museum of the African Dispora</h2>
                 <p>685 Mission St San Francisco, CA 94105</p>
               </a>
             </div>
             <div>
-              <a class="item item-thumbnail-left" href="#">
+              <a class="item item-thumbnail-left" href="#/app/mlk-stop">
                 <img class="image" src="img/mlk.jpg" alt="" />
                 <h2>Dr. Martin Luther King Jr. Memorial</h2>
                 <p>750 Howard St San Francisco, CA 94103</p>
               </a>
             </div>
             <div>
-              <a class="item item-thumbnail-left" href="#">
+              <a class="item item-thumbnail-left" href="#/app/saint-stop">
                 <img class="image" src="img/coltrane.jpg" alt="" />
                 <h2>Saint John Coltraine African American Church</h2>
                 <p>1286 Fillmore St San Francisco, CA 94115</p>
